style: run format prettier new config

--- a/app/watch/layout-demo.html
+++ b/app/watch/layout-demo.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta charset="UTF-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <title>Education Site Layout</title>
   <style>
       /* Reset some basic styling */
-      body, h1, h2, h3, h4, p {
+      body,
+      h1,
+      h2,
+      h3,
+      h4,
+      p {
           margin: 0;
           padding: 0;
           font-size: 16px;
@@ -117,7 +122,7 @@
 
       .video-name {
           margin: 0 0 4px 0;
-          font-family: "Roboto", "Arial", sans-serif;
+          font-family: 'Roboto', 'Arial', sans-serif;
           font-weight: 500;
           overflow: hidden;
           display: block;
@@ -129,7 +134,7 @@
           text-overflow: ellipsis;
           white-space: normal;
           display: -moz-box;
-          font-family: "Roboto", "Arial", sans-serif;
+          font-family: 'Roboto', 'Arial', sans-serif;
           font-weight: bold;
           overflow: hidden;
           -webkit-line-clamp: 2;
@@ -144,8 +149,8 @@
           max-width: 1440px;
           display: grid;
           grid-template-areas:
-        "main-video explore-more"
-        "comments explore-more";
+          'main-video explore-more'
+          'comments explore-more';
           grid-template-columns: 2fr 1fr;
           grid-template-rows: 1fr;
           width: 100vw;
@@ -211,10 +216,10 @@
       @media (max-width: 1024px) {
           .grid-container {
               grid-template-areas:
-            "main-video"
-            "related-videos"
-            "comments"
-            "explore-more";
+            'main-video'
+            'related-videos'
+            'comments'
+            'explore-more';
               grid-template-columns: 1fr;
               grid-template-rows: auto;
               height: 100%;
@@ -226,20 +231,26 @@
 <div class="grid-container">
   <main class="main-video">
     <div class="video-player">
-      <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
-              frameborder="0"
-              height="100%" referrerpolicy="strict-origin-when-cross-origin"
-              src="https://www.youtube.com/embed/H6lDvpFVEmw?si=8rOkzdFmg9M1R41D&amp;start=1305"
-              title="YouTube video player"
-              width="100%"></iframe>
+      <iframe
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+        frameborder="0"
+        height="100%"
+        referrerpolicy="strict-origin-when-cross-origin"
+        src="https://www.youtube.com/embed/H6lDvpFVEmw?si=8rOkzdFmg9M1R41D&amp;start=1305"
+        title="YouTube video player"
+        width="100%"
+      ></iframe>
     </div>
     <div class="video-information">
       <div>
         <h1>How a "Real" Musician can use Suno AI generate music!</h1>
       </div>
       <div>
-        <h3>Welcome to your personnel safe space. Put on your headphones and
-          disappear from this planet with me...</h3>
+        <h3>
+          Welcome to your personnel safe space. Put on your headphones and
+          disappear from this planet with me...
+        </h3>
       </div>
       <div class="video-info">
         <div class="video-avatar">AV</div>
@@ -267,7 +278,9 @@
         <img alt="video" src="../../assets/thumb-demo.jpg" />
       </div>
       <div class="video-details">
-        <p class="video-name">How a "Real" Musician can use Suno AI generate</p>
+        <p class="video-name">
+          How a "Real" Musician can use Suno AI generate
+        </p>
         <p class="video-author">Doctor Code</p>
         <p class="video-numbers">11K views 12 Hours ago</p>
       </div>
@@ -280,7 +293,9 @@
         <img alt="video" src="https://picsum.photos/200?random=2" />
       </div>
       <div class="video-details">
-        <p class="video-name">How a "Real" Musician can use Suno AI generate</p>
+        <p class="video-name">
+          How a "Real" Musician can use Suno AI generate
+        </p>
         <p class="video-author">Doctor Code</p>
         <p class="video-numbers">11K views 12 Hours ago</p>
       </div>
@@ -293,7 +308,9 @@
         <img alt="video" src="../../assets/thumb-demo.jpg" />
       </div>
       <div class="video-details">
-        <p class="video-name">How a "Real" Musician can use Suno AI generate</p>
+        <p class="video-name">
+          How a "Real" Musician can use Suno AI generate
+        </p>
         <p class="video-author">Doctor Code</p>
         <p class="video-numbers">11K views 12 Hours ago</p>
       </div>
@@ -306,7 +323,9 @@
         <img alt="video" src="../../assets/thumb-demo.jpg" />
       </div>
       <div class="video-details">
-        <p class="video-name">How a "Real" Musician can use Suno AI generate</p>
+        <p class="video-name">
+          How a "Real" Musician can use Suno AI generate
+        </p>
         <p class="video-author">Doctor Code</p>
         <p class="video-numbers">11K views 12 Hours ago</p>
       </div>
@@ -319,7 +338,9 @@
         <img alt="video" src="../../assets/thumb-demo.jpg" />
       </div>
       <div class="video-details">
-        <p class="video-name">How a "Real" Musician can use Suno AI generate</p>
+        <p class="video-name">
+          How a "Real" Musician can use Suno AI generate
+        </p>
         <p class="video-author">Doctor Code</p>
         <p class="video-numbers">11K views 12 Hours ago</p>
       </div>
@@ -332,7 +353,9 @@
         <img alt="video" src="../../assets/thumb-demo.jpg" />
       </div>
       <div class="video-details">
-        <p class="video-name">How a "Real" Musician can use Suno AI generate</p>
+        <p class="video-name">
+          How a "Real" Musician can use Suno AI generate
+        </p>
         <p class="video-author">Doctor Code</p>
         <p class="video-numbers">11K views 12 Hours ago</p>
       </div>
@@ -345,7 +368,9 @@
         <img alt="video" src="../../assets/thumb-demo.jpg" />
       </div>
       <div class="video-details">
-        <p class="video-name">How a "Real" Musician can use Suno AI generate</p>
+        <p class="video-name">
+          How a "Real" Musician can use Suno AI generate
+        </p>
         <p class="video-author">Doctor Code</p>
         <p class="video-numbers">11K views 12 Hours ago</p>
       </div>
@@ -358,7 +383,9 @@
         <img alt="video" src="../../assets/thumb-demo.jpg" />
       </div>
       <div class="video-details">
-        <p class="video-name">How a "Real" Musician can use Suno AI generate</p>
+        <p class="video-name">
+          How a "Real" Musician can use Suno AI generate
+        </p>
         <p class="video-author">Doctor Code</p>
         <p class="video-numbers">11K views 12 Hours ago</p>
       </div>
@@ -371,7 +398,9 @@
         <img alt="video" src="../../assets/thumb-demo.jpg" />
       </div>
       <div class="video-details">
-        <p class="video-name">How a "Real" Musician can use Suno AI generate</p>
+        <p class="video-name">
+          How a "Real" Musician can use Suno AI generate
+        </p>
         <p class="video-author">Doctor Code</p>
         <p class="video-numbers">11K views 12 Hours ago</p>
       </div>
@@ -384,7 +413,9 @@
         <img alt="video" src="../../assets/thumb-demo.jpg" />
       </div>
       <div class="video-details">
-        <p class="video-name">How a "Real" Musician can use Suno AI generate</p>
+        <p class="video-name">
+          How a "Real" Musician can use Suno AI generate
+        </p>
         <p class="video-author">Doctor Code</p>
         <p class="video-numbers">11K views 12 Hours ago</p>
       </div>
